2008-12-05  Darin Adler  <darin@apple.com>

Reviewed by Alexey Proskuryakov.

        - fix https://bugs.webkit.org/show_bug.cgi?id=22674
          Webkit r39005 does not start, an entry point not found

        * WebView.cpp:
        (findCFNetworkModule): Added.
        (findCopySharedURLCacheFunction): Added.
        (WebView::setCacheModel): Call CFURLCacheCopySharedURLCache via dynamic loading
        instead of compiling based on which version of CFNetwork headers are present.



Canonical link: https://commits.webkit.org/31231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39027 268f45cc-cd09-0410-ab3c-d52691b4dbfc